@@ -1,3 +1,6 @@
+- Fix cjson include paths.
+
+
 2.0.0 - 2020-12-03
 ==================
 
